# wgan

./: .gitignore  Dockerfile  Makefile  README.md  activate.sh  base.Dockerfile  envs.sh  pyproject.toml  requirements.txt
notebooks/datasets/: 01_joao.pinto_SantaCasa_imageamento_anonimizado_valid_real_data_preparation.ipynb  01_joao.pinto_SantaCasa_imageamento_real_data_preparation.ipynb  01_joao.pinto_SantaCasa_synthetic_data_preparation.ipynb  01_joao.pinto_Shenzhen_real_data_preparation.ipynb  01_joao.pinto_Shenzhen_synthetic_data_preparation.ipynb
production/manaus/: create_task.py
production/manaus/configs/: c_manaus_notb_card.json  c_manaus_tb_card.json  manaus_notb_card.json  manaus_tb_card.json
scripts/: run_train.py
slurm/: run_maestro.sh
versions/Manaus/c_manaus/: create_jobs.py  create_table.py  create_tasks.py  generate.py  run.py
versions/Manaus/manaus/: create_jobs.py  create_tasks.py  run.py
versions/SantaCasa/imageamento/: create_jobs.py  create_tasks.py  generate.py
versions/SantaCasa/imageamento_anonimizado_valid/: create_jobs.py  create_table.py  create_tasks.py  generate.py  run.py
versions/Shenzhen/china/: create_jobs.py  create_table.py  create_tasks.py  generate.py  run.py
versions/datasets/: download.py
wgan/: __init__.py  main.py  wgangp.py
wgan/core/: MultiProcessing.py  __init__.py  data.py  stratified_kfold.py
wgan/datasets/: __init__.py  config.json  dataset.py  reader.py
