[tool.poetry]
name = "rxwgan"
version = "0.1.0"
description = ""
authors = ["jodafons <jodafons@lps.ufrj.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
maestro = {git = "https://github.com/jodafons/orchestra-server.git"}
wandb = "^0.16.0"
loguru = "^0.7.2"
mlflow = "^2.8.1"
jupyterlab = "^4.0.9"
pandarallel = "^1.6.5"
psutil = "^5.9.6"
tqdm = "^4.66.1"
pandas = "^2.1.3"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
